[package]
name = "httpd-nolibc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 更改输出的可执行文件的名称
[[bin]]
name = "mini-httpd"
path = "src/main.rs"

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
